kfreebsd-11 (11.0~svn256281-1) UNRELEASED; urgency=low

  * New upstream snapshot.
    - Rename to kfreebsd-11.
    - Refresh all patches.

  [ Robert Millan ]
  * Only build with Clang on architectures where it is the default in
    upstream.

 -- Robert Millan <rmh@debian.org>  Thu, 10 Oct 2013 20:02:00 +0200

kfreebsd-10 (10.0~svn255915-1) experimental; urgency=low

  * New upstream snapshot.
    - Includes Xen HVM support.

  [ Robert Millan ]
  * Remove one gratuitous round of src copying.
  * Disable -Werror only for non-Clang compilers.
  * Properly set CLANG_IS_CC knob according to selected compiler.
  * Re-enable -O2.
  * Build kfreebsd-headers-\* only on kfreebsd-@arch@.
  * userland.diff: Import selection of header fixes needed by userland.

  [ Steven Chamberlain ]
  * Improve repeatability of builds:
    - Omit gzip timestamp from kernel image.
    - Use timestamp from debian/changelog for uname --kernel-release,
      instead of the exact time of the build.

 -- Robert Millan <rmh@debian.org>  Sun, 29 Sep 2013 02:16:58 +0200

kfreebsd-10 (10.0~svn255412-1) experimental; urgency=low

  * New upstream snapshot.
    - 920_linux_cflags.diff: Set __FreeBSD__=10 in order to fix <stddef.h>
      buildability.
    - Switch to clang (at least until/unless GCC <wmmintrin.h> becomes
      buildable).

  [ Robert Millan ]
  * Stop overriding linker_path, this is done in userland already.
  * Make kfreebsd-headers-@version@-@abiname@ kfreebsd-specific.

 -- Robert Millan <rmh@debian.org>  Mon, 09 Sep 2013 14:18:49 +0200

kfreebsd-10 (10.0~svn254663-1) experimental; urgency=low

  * New upstream snapshot.
    - Refresh all patches.
    - Fix for CVE-2013-3077. (Closes: #720471)
    - Fix for CVE-2013-5209. (Closes: #720478)

  [ Robert Millan ]
  * Harmonize kernel config with upstream, reducing the GENERIC delta.
    - Let GENERIC define fdc. DEBIAN can override this afterwards.
    - Let GENERIC define lpt, ppi, tun, gif and faith. There seems to